<resources>
    <string name="app_title_short" translatable="false">TWT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email" translatable="false">android@zephyrsoft.org</string>
    <string name="in">IN</string>
    <string name="onespace" translatable="false">" "</string>
    <string name="out">OUT</string>
    <string name="worked">Worked</string>
    <string name="workedWithDuration">Worked: %1$s</string>
    <string name="workedWithDurationPreview">Worked: 5:30</string>
    <string name="shortDate">E, MM/dd</string>
    <string name="flexi">Flexi</string>
    <string name="mondayLong">Monday</string>
    <string name="tuesdayLong">Tuesday</string>
    <string name="wednesdayLong">Wednesday</string>
    <string name="thursdayLong">Thursday</string>
    <string name="fridayLong">Friday</string>
    <string name="saturdayLong">Saturday</string>
    <string name="sundayLong">Sunday</string>
    <string name="flexiTimeDayDescription">check if you work on this day</string>
    <string name="total">Total</string>
    <string name="target">Target</string>
    <string name="task">Task</string>
    <string name="text">Text</string>
    <string name="choose_task">Choose a task</string>
    <string name="clockedIn">clocked in</string>
    <string name="since">since %1$s</string>
    <string name="clockedOut">clocked out</string>
    <string name="clockIn">Start Tracking</string>
    <string name="clockInShort">Start</string>
    <string name="clockInChange">Start New Period</string>
    <string name="clockInChangeShort">New Period</string>
    <string name="clockOut">Stop Tracking</string>
    <string name="clockOutShort">Stop</string>
    <string name="flexTime">Flex</string>
    <string name="eventTypeInfoMessage"><b>Start Tracking / Stop Tracking:</b>\nAllows you to create clock-in or clock-out events as if you tapped the "Start" or "Stop" buttons at the selected time.\n\n<b>Flex:</b>\nAllows you to define the working time for the selected day.\nEvent at 00:00 = flexi time will stay the same as before if no work is clocked (as if the day wasn\'t a work day)\nEvent at any other time = set working time to the selected hour(s) and minutes(s)\nExample: regular working time is 8 hours, flex event at 03:30 => required working time for the day is 3,5 hours</string>
    <string name="insert_default_times">Multi-Insert</string>
    <string name="edit_tasks">Edit Tasks</string>
    <string name="edit_events">Edit Events</string>
    <string name="edit_targets">Edit Targets</string>
    <string name="options">Options</string>
    <string name="request_to_ignore_battery_optimizations">Disable Restrictions</string>
    <string name="request_to_ignore_battery_optimizations_title">Disable Battery Optimization</string>
    <string name="request_to_ignore_battery_optimizations_text">If you have problems using the location or WiFi tracking method, you may disable Android\'s built-in battery optimization so the app is not restricted so much by the system. This may stress the battery slightly more, but if you grant this, the app can be active in the background and thus help you track your work time automatically.\n\nIf you want that, please allow it in the following dialog.</string>
    <string name="request_to_ignore_battery_optimizations_nothing_to_do">Nothing to do - either your Android system is old enough to not have battery optimization yet, or the app is already on the system\'s exemption list for battery optimization and thus can be active in the background.</string>
    <string name="request_to_ignore_battery_optimizations_positive">Yes, I want that</string>
    <string name="new_task">New Task</string>
    <string name="new_event">New Event</string>
    <string name="enter_new_task_name">Enter the new task name:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rename_task">Rename Task</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_target">Edit Target</string>
    <string name="delete">Delete</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_event">Delete Event</string>
    <string name="toggle_activation_state_of_task">Toggle Activation State</string>
    <string name="make_default_task">Make default task</string>
    <string name="really_enable_task">Really enable the task?</string>
    <string name="really_disable_task">Really disable the task?</string>
    <string name="really_delete_task">Really delete the task?</string>
    <string name="cannot_delete_task_used">The task cannot be deleted because it is still used in events.</string>
    <string name="cannot_delete_task_last_one">The task cannot be deleted because it is the last one.\n\nFirst create another one, then delete this one (or just rename it).</string>
    <string name="really_delete_event">Really delete the selected event(s)?</string>
    <string name="enableFlexiTime">Enable Flexi Time</string>
    <string name="flexiTimeBalancing">Flexi Time Balancing</string>
    <string name="preferences">Options</string>
    <string name="message">Message</string>
    <string name="shortDateFormat">DD.MM.</string>
    <string name="flexiTimeToZeroOnEveryDay">countdown to 0:00 every day</string>
    <string name="flexiTimeToZeroOnEveryDayDescription">only on last working day if disabled</string>
    <string name="flexiTimeStartValue">Start Value for Flexi Time</string>
    <string name="flexiTimeStartValueDescription">in hours:minutes, e.g. 7:45</string>
    <string name="smallestTimeUnit">Smallest Time Unit</string>
    <string name="smallestTimeUnitDescription">in minutes, e.g. 15 - flattening rounds to this amount of time (has to be a divisor of 60)</string>
    <string name="backward">jumped backward</string>
    <string name="forward">jumped forward</string>
    <string name="weeks">weeks</string>
    <string name="now">NOW</string>
    <string name="locationBasedTracking">Location-based Tracking</string>
    <string name="enableLocationBasedTracking">Track by Location</string>
    <string name="workplaceLatitude">Latitude of Workplace</string>
    <string name="workplaceLongitude">Longitude of Workplace</string>
    <string name="workplaceLatitudeLongitudeDescription">in degrees, e.g. 44.2</string>
    <string name="trackingTolerance">Tolerance</string>
    <string name="trackingToleranceDescription">in whole meters, e.g. 500</string>
    <string name="wifiBasedTracking">WiFi-based Tracking</string>
    <string name="enableWifiBasedTracking">Track by WiFi</string>
    <string name="enableWifiBasedTrackingDescription">will only be active if wi-fi radio is enabled</string>
    <string name="workplaceWifiSSID">SSID at Workplace</string>
    <string name="workplaceWifiSSIDDescription">name of a visible wi-fi SSID - you don\'t need to be connected</string>
    <string name="wifiBasedTrackingVibrate">Vibrate on Events</string>
    <string name="ignoreBefore">Ignore before events</string>
    <string name="ignoreAfter">Ignore after events</string>
    <string name="ignoreBeforeAfterDescription">in minutes, e.g. 10</string>
    <string name="flexiTimeTarget">Flexi Time Target</string>
    <string name="flexiTimeTargetDescription">in hours:minutes per week, e.g. 38:30</string>
    <string name="flexiTimeResetInterval">Flexi Time Reset Interval</string>
    <string name="flexiTimeResetIntervalDescription">Automatic flexi reset, at start of selected
            interval</string>
    <string name="locationBasedTrackingVibrate">Vibrate on Events</string>
    <string name="autoPause">Automatic Pause</string>
    <string name="autoPauseEnabled">Enable Automatic Pause</string>
    <string name="autoPauseBegin">Begin of Automatic Pause</string>
    <string name="autoPauseBeginDescription">in 24 hour time, e.g. 12.30</string>
    <string name="autoPauseEnd">End of Automatic Pause</string>
    <string name="autoPauseEndDescription">in 24 hour time, e.g. 13.30</string>
    <string name="flatteningEnabled">Enable Time Flattening</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="saveChanges">Save Changes</string>
    <string name="comment_hint">Hint (optional)</string>
    <string name="optional">(optional)</string>
    <string name="notification">Notification</string>
    <string name="notificationEnabled">Notification enabled</string>
    <string name="notificationDescription">only shown when clocked in</string>
    <string name="notificationAlways">Always show notification</string>
    <string name="notificationAlwaysDescription">Useful for clocking in/out via a connected device, e.g. a smartwatch (combined with non-persistent notifications, see below)</string>
    <string name="notificationNonpersistent">Make all notifications non-persistent</string>
    <string name="notificationNonpersistentDescription">Pro: notifications can be synced to connected devices, e.g. a smartwatch / Contra: notifications are not pinned at the top of the list and also can be closed unintentionally (but will come back after a minute)</string>
    <string name="notificationSilent">Make all notifications silent</string>
    <string name="notificationSilentDescription">Don\'t notify audibly or by vibration at all</string>
    <string name="timeAheadTitle">File an event in advance</string>
    <string name="timeAheadIntro">File an event of the type</string>
    <string name="timeAheadOutro">in advance for in</string>
    <string name="ten">10</string>
    <string name="minutes">minutes</string>
    <string name="longClickHint">(long click to schedule an event)</string>
    <string name="availableActions">Available Actions</string>
    <string name="logo">Logo</string>
    <string name="about">About / Help</string>
    <string name="use_current_location">Here = Work</string>
    <string name="really_use_current_location">Do you want to use your current location as work place? The work place coordinates you may have entered before will be overwritten! (It could take some seconds to find out your current location.)</string>
    <string name="timeRange">Time Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="previous">prev</string>
    <string name="next">next</string>
	<string name="today">today</string>
    <string name="customize">Customize</string>
    <string name="reports">Reports</string>
    <string name="report_preview">Report Preview</string>
    <string name="backup_on_google_servers">Do you want to activate backup on Google servers? This setting can be changed anytime under options.</string>
    <string name="backup">Data Backup</string>
    <string name="backup_to_google">Backup to Google Servers</string>
    <string name="backup_enabled">Backup enabled</string>
    <string name="lastModifiedTimestamp">Data Last Modified:</string>
    <string name="lastBackupTimestamp">Last Backup:</string>
    <string name="restore">Data Restore</string>
    <string name="backup_started_in_background">Backup started in background.</string>
    <string name="backup_failed">Backup failed.</string>
    <string name="backup_finished">Backup finished.</string>
    <string name="restore_started_in_background">Restore started in background.</string>
    <string name="restore_finished">Restore finished.</string>
    <string name="restore_failed">Restore failed.</string>
    <string name="restore_failed_file_not_found">Restore failed, no backup files found.</string>
    <string name="backup_overwrite">Overwrite existing backup files?</string>
    <string name="exportLogs">Export Logs</string>
    <string name="sendLogs">Send Logs</string>
    <string name="tools">Tools</string>
    <string name="data">Data</string>
    <string name="end">End</string>
</resources>