<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/insert_default_times" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timeRangeLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeRange"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/timeRangeFromLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <DatePicker
                android:id="@+id/fromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.0"
                android:calendarViewShown="false" />

            <TextView
                android:id="@+id/timeRangeToLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <DatePicker
                android:id="@+id/toDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.0"
                android:calendarViewShown="false" />

            <TextView
                android:id="@+id/taskLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/task"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/optional" >
            </EditText>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
