<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_between_buttons_each_side"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_between_buttons_each_side"
            android:layout_weight="0.5"
            android:text="@string/saveChanges" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioClockIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/clockIn" />

                <RadioButton
                    android:id="@+id/radioClockOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="@string/clockOut" />
            </RadioGroup>

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/date"
                style="@style/TextViewLikeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:text="12.4.2015" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/time"
                style="@style/TextViewLikeEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/endLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/end"
                style="@style/TextViewLikeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <org.zephyrsoft.trackworktime.ui.TimeZonePicker
                android:id="@+id/time_zone_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp" />

            <LinearLayout
                android:id="@+id/taskLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/taskLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/task"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/task"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:prompt="@string/choose_task" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_hint"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
