<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryContainer"
    android:orientation="vertical"
    android:theme="@style/Theme.trackworktime.widget">

    <TextView
        android:id="@+id/workTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/workedWithDurationPreview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="2dp">

        <Button
            android:id="@+id/clockIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/clockIn" />

        <Button
            android:id="@+id/clockOut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/clockOut" />

    </LinearLayout>


</LinearLayout>